// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible #handleClick toggles collapsible on click 1`] = `
<body>
  
  
  <div
    class="collapsible"
    data-collapsible="collapsible-id"
    data-visible="false"
  >
    
    
    <h5>
      
      
      <button
        aria-controls="collapsible-id"
        aria-expanded="false"
        class="collapsible-trigger"
        data-target="collapsible-id"
        id="collapsible-trigger-id"
      >
        
        Collapsible Trigger
      
      </button>
      
    
    </h5>
    
    
    <div
      aria-hidden="true"
      aria-labelledby="collapsible-trigger-id"
      class="collapsible-content"
      id="collapsible-id"
      style=""
    >
      
      
      <p
        class="has-p"
      >
        
        Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
        ipsum ut voluptate. 
        <a
          href="#"
          tabindex="-1"
        >
          E pluribus unum.
        </a>
        
      
      </p>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Collapsible API start does not open collapsible by default if [data-visible='false'] is set 1`] = `
<body>
  
  
  <div
    class="collapsible"
    data-collapsible="collapsible-id"
    data-visible="false"
  >
    
    
    <h5>
      
      
      <button
        aria-controls="collapsible-id"
        aria-expanded="false"
        class="collapsible-trigger"
        data-target="collapsible-id"
        id="collapsible-trigger-id"
      >
        
        Collapsible Trigger
      
      </button>
      
    
    </h5>
    
    
    <div
      aria-hidden="true"
      aria-labelledby="collapsible-trigger-id"
      class="collapsible-content"
      id="collapsible-id"
    >
      
      
      <p
        class="has-p"
      >
        
        Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
        ipsum ut voluptate. 
        <a
          href="#"
          tabindex="-1"
        >
          E pluribus unum.
        </a>
        
      
      </p>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Collapsible API start sets attributes 1`] = `
<body>
  
  
  <div
    class="collapsible"
    data-collapsible="collapsible-id"
    data-visible="true"
  >
    
    
    <h5>
      
      
      <button
        aria-controls="collapsible-id"
        aria-expanded="true"
        class="collapsible-trigger"
        data-target="collapsible-id"
        id="collapsible-trigger-id"
      >
        
        Collapsible Trigger
      
      </button>
      
    
    </h5>
    
    
    <div
      aria-hidden="false"
      aria-labelledby="collapsible-trigger-id"
      class="collapsible-content"
      id="collapsible-id"
      style="max-height: 0em;"
    >
      
      
      <p
        class="has-p"
      >
        
        Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
        ipsum ut voluptate. 
        <a
          href="#"
          tabindex="0"
        >
          E pluribus unum.
        </a>
        
      
      </p>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Collapsible API stop + handleClick does not toggle collapsible on click 1`] = `
<div
  aria-hidden="false"
  aria-labelledby="collapsible-trigger-id"
  class="collapsible-content"
  id="collapsible-id"
  style="max-height: 0em;"
>
  
      
  <p
    class="has-p"
  >
    
        Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
        ipsum ut voluptate. 
    <a
      href="#"
      tabindex="0"
    >
      E pluribus unum.
    </a>
    
      
  </p>
  
    
</div>
`;
